@@ -1,0 +1,3 @@
+(function(w,d) {
+  console.log("I'm loaded!");
+})();
