@@ -5,7 +5,9 @@ my $t = t::Helper->t(pipes => [qw(Css Combine)]);
 eval { $t->app->asset->process };
 like $@, qr{Could not find input asset "no-such-stylesheet\.css"}, 'could not find asset';
 
-$t->app->asset->process('app.css', 'input.css');
+$t->app->asset->process('something.png', 'image/sample.png');
+$t->app->asset->process('app.css',       'input.css');
+
 $t->get_ok('/')->status_is(200)
   ->element_exists(qq(link[href="/asset/f956a3f925/input.css"]));
 
@@ -16,12 +18,16 @@ $t->get_ok('/asset/f956a3f925/input.css')->status_is(200);
 $t->get_ok('/asset/f956a3f925/foo.css')->status_is(200);
 
 # This is useful when assets are combined
-$t->get_ok('/asset/aaaaaaaaaa/app.css')->status_is(404)
-  ->content_is("// Invalid checksum for topic 'app.css'\n");
+$t->get_ok('/asset/aaaaaaaaaa/app.css')->status_is(200)
+  ->content_is(qq(\@import "/asset/f956a3f925/input.css";\n));
 
 # Both checksum and topic is invalid
 $t->get_ok('/asset/aaaaaaaaaa/foo.css')->status_is(404)
   ->content_is("// No such asset 'foo.css'\n");
+
+$t->get_ok('/asset/aaaaaaaaaa/something.png')->status_is(302)
+  ->header_like(Location => qr{^/asset/\w+/something.png$});
+$t->get_ok($t->tx->res->headers->location)->status_is(200);
 
 done_testing;
 
